# thermr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.py  configuration.py  gateffPlot.py  thermr.cpp
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
docs/: index.rst  inputs.rst  overview.rst  quickStart.rst
docs/_build/doctrees/: additional.doctree  codingDetails.doctree  environment.pickle  index.doctree  overview.doctree  quickStart.doctree  theory.doctree  usersGuide.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  overview.html  quickStart.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  quickStart.rst.txt
docs/exampleInputs/: simple  simple2
metaconfigure/: description.json
src/: thermr.cpp  thermr.hpp
src/approximations/freeGas/: freeGas.h
src/approximations/freeGas/test/: CMakeLists.txt  freeGas.test.cpp
src/calcem/: calcem.h
src/calcem/calcem_util/: e_ep_mu.h  e_mu_ep.h  sig.h  sigl.h
src/calcem/calcem_util/e_ep_mu_util/: e_ep_mu.h  ep_mu.h  sigl.h
src/calcem/calcem_util/e_mu_ep_util/: adaptiveReconstruction.h  mainLoop.h  sigu.h
src/calcem/calcem_util/e_mu_ep_util/sigu_util/test/: CMakeLists.txt  begin_sigu.test.cpp  do150.test.cpp
src/calcem/calcem_util/e_mu_ep_util/test/: CMakeLists.txt  adaptiveReconstruction.test.cpp  mainLoop.test.cpp  sigu.test.cpp
src/calcem/calcem_util/sig_util/: terp1.h  terpq.h
src/calcem/calcem_util/test/: CMakeLists.txt  e_ep_mu.test.cpp  e_mu_ep.test.cpp  sig.test.cpp
src/calcem/test/: CMakeLists.txt
src/coh/: coh.h  coherSort.py
src/coh/coh_util/: sigcoh.h  upstk.h
src/coh/coh_util/readWrite_util/: finda.h  loada.h  repoz.h
src/coh/coh_util/sigcoh_util/: form.h  legndr.h  terp.h
src/coh/coh_util/test/: CMakeLists.txt  sigcoh.test.cpp  upstk.test.cpp
src/coh/test/: CMakeLists.txt  coh.test.cpp
src/coherentElastic/: coherentElastic.h
src/coherentElastic/coherentElastic_util/: sigcoh.h  upstk.h
src/coherentElastic/coherentElastic_util/sigcoh_util/: legndr.h  terp.h
src/coherentElastic/coherentElastic_util/sigcoh_util/test/: CMakeLists.txt  form.test.cpp  legndr.test.cpp  terp.test.cpp
src/coherentElastic/coherentElastic_util/test/: CMakeLists.txt  sigcoh.test.cpp  upstk.test.cpp
src/coherentElastic/test/: CMakeLists.txt  coherentElastic.test.cpp
src/generalTools/: constants.h  sigfig.h  testing.h
src/generalTools/test/: CMakeLists.txt  sigfig.test.cpp
src/general_util/test/: CMakeLists.txt
src/iel/: iel.h  incoherentElastic.h
src/iel/iel_util/: terpa.h
src/iel/iel_util/test/: CMakeLists.txt  terp1.test.cpp  terpa.test.cpp
src/iel/test/: CMakeLists.txt  iel.test.cpp  incoherentElastic.test.cpp
src/incoherentElastic/: incoherentElastic.h
src/incoherentElastic/test/: CMakeLists.txt  incoherentElastic.test.cpp
src/inelastic/: e_ep_mu.h  e_mu_ep.h  sig.h
src/inelastic/e_ep_mu_util/: .sigl.h.swp  ep_mu.h  sigl.h
src/inelastic/e_ep_mu_util/test/: CMakeLists.txt  ep_mu.test.cpp  sigl.test.cpp
src/inelastic/e_mu_ep_util/: mainLoop.h  sigu.h
src/inelastic/e_mu_ep_util/test/: CMakeLists.txt  mainLoop.test.cpp  sigu.test.cpp
src/inelastic/sig_util/: terpq.h
src/inelastic/sig_util/test/: CMakeLists.txt  terpq.test.cpp
src/inelastic/test/: CMakeLists.txt  e_ep_mu.test.cpp  e_mu_ep.test.cpp  sig.test.cpp
src/inelastic/test/resources/: test1_tape25  test2_tape25
src/readWrite/: readingFuncs.h  writingFuncs.h
src/simpler/elastic/coherent/: coherent.h
src/simpler/elastic/coherent/coherentTools/sigcohTools/test/: CMakeLists.txt  legndr.test.cpp
src/temp_eff/: temp_eff.h
src/temp_eff/temp_eff_util/: gatef2.h  gateff.h
src/temp_eff/test/: CMakeLists.txt  temp_eff.test.cpp
src/test/: CMakeLists.txt  thermr.test.cpp
src/test/correct_h2o_info/: correct_6222_altered_egrid.h  tape24.h
src/test/correct_test1_h2o/: tape25  thermr_test_h2o_input
src/test/correct_test2_be/: input  tape20  tape24  tape25
src/test/correct_test3_h2oMultTemp/: input  tape23  tape24
src/test/correct_test4_h2o_EmuEp/: tape25  thermr_test_h2o_input
src/test/correct_test5_zrh/: tape20  tape25  thermr_ZrH
src/test/correct_test6_zrh_multT/: tape23  tape24  tape25
src/test/correct_test7_h2o_freeGas/: tape22  tape23  thermr_test_h2o_freeGas
src/test/correct_test8_h2o_freeGas_EMuEp/: thermr_test_h2o_freeGasEmuEp
src/test/resources/: be_tape23  h2o500K_tape24  h2o500K_tape25  h2oEmuEp_tape25  h2oFreeGasEmuEp_tape25  h2oFreeGas_tape25  h2oMultT_tape25  h2o_tape25  zrhMultT_tape23  zrhMultT_tape25  zrh_tape23  zrh_tape24
src/write/: writingFuncs.h
subprojects/: ENDFtk  Log  catch-adapter  disco  eigen-adapter  fmt-adapter  hana-adapter  header-utilities  hopscotch-map-adapter  range-v3-adapter  spdlog-adapter  variant-adapter
thermr_util/: calcem.h  calcem.test.cpp  coh.h  coh.test.cpp  coh2.h  gatef2.h  gatef2.test.cpp  gateff.h  gateff.test.cpp  openz.h  tpidio.h
thermr_util/calcem/: calcem.test.cpp  e_ep_mu.h  e_ep_mu.test.cpp  e_mu_ep.h  e_mu_ep.test.cpp
thermr_util/calcem/calcem_util/: beginningLoop.h  beginningLoop.test.cpp  sig.h  sig.test.cpp  sigfig.h  sigfig.test.cpp  sigl.h  sigl.test.cpp  sigu.h  sigu.test.cpp
thermr_util/calcem/e_ep_mu_util/: 310.test.cpp  313.h  313.test.cpp  360.h  360.test.cpp  380.h  380.test.cpp  410.h
thermr_util/coh_util/: sigcoh.h  sigcoh.test.cpp  upstk.h  upstk.test.cpp
thermr_util/coh_util/readWrite_util/: finda.h  finda.test.cpp  loada.h  loada.test.cpp  repoz.h  repoz.test.cpp
thermr_util/coh_util/sigcoh_util/: 150.h  155.h  160.h  160.test.cpp  165.h  175.h  175.test.cpp  200.h  200.test.cpp  210.h  210.test.cpp  form.h  form.test.cpp  legndr.h  legndr.test.cpp  terp.h  terp.test.cpp
thermr_util/extra/: legndr.h  legndr.test.cpp  sig.h  sig.test.cpp  sigl.h  sigl.test.cpp  sigu.h  sigu.test.cpp  terp1.h  terp1.test.cpp  terpq.h  terpq.test.cpp
thermr_util/iel/: iel.h  iel.test.cpp  terpa.h  terpa.test.cpp
thermr_util/iel/endf/: contio.h  contio.test.cpp
(+34 files in other folders)
